# vx-code

./: README.md
example-async/: .editorconfig  Cargo.toml
example-async/src/: main.rs
example-ropey/: Cargo.toml
example-ropey/src/: main.rs
example-termion/: Cargo.toml
example-termion/src/: main.rs
example-xi/: .editorconfig  Cargo.toml  README.md
example-xi/src/: channels.rs  error.rs  event_controller.rs  lib.rs  logging.rs  main.rs
vx-code/: Cargo.toml
vx-code/src/: main.rs
vx-code1/: Cargo.toml
vx-code1/src/: main.rs  xi.rs
vx-code1/src/event_controller/: mod.rs  status_bar.rs  view.rs
vx-code1/src/event_controller/style/: termion.rs
vx-code1/src/event_controller/window/: mod.rs
vx-code1/src/event_controller/window/termion/: layout.rs  mod.rs  window.rs
vx-code1/src/input_controller/: mod.rs  mode_actions.rs
vx-code1/src/input_controller/actions/: mod.rs  rpc.rs
vx-code1/src/input_controller/keyboard/: mod.rs
