[package]
name = "example-xi"
version = "0.1.0"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.5"
fern = "0.6"
log = "0.4.3"
dirs = "2.0"
thiserror = "1"

[dependencies.xi-core-lib]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-rpc]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-trace]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"
features = ["chrome_trace_event"]
optional = true
